<resources>
    <string name="app_name">VHS</string>

    <string name="action_settings">Settings</string>
    <string name="login">Log in</string>
    <string name="signup">Sign up</string>
    <string name="developedby">Developed by</string>
    <string name="tsfactory">Ts Factory</string>
    <string name="vhs">Virtual Hub Services</string>
    <string name="slogan">Ecological Tourism Marketplace</string>
    <string name="title_activity_main">MainActivitySs</string>

    <string name="hello_world">Hello world!</string>

    <string name="title_section1">My Properties</string>
    <string name="title_section2">Add Property</string>
    <string name="title_section3">My Profile</string>
    <string name="title_section4">Log Out</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <!-- ADD PROPERTY -->
    <string name="property_title">Property title</string>
    <string name="main_description">Main description</string>
    <string name="property_location">Town, city or village</string>
    <string name="property_price">Default nightly price</string>
    <string name="property_date_message">Pick the date that your property will be available to potential guests</string>
    <string name="property_photo_message">Upload a photo to really sell your property to potential guests. Click <b>Add photo</b> and choose a picture to <b>upload</b></string>
    <string name="property_add_photo">Add photo</string>

    <!-- PROFILE -->
    <string name="profile_save">Save</string>
    <string name="profile_update_error">Unable to save the changes</string>

    <string-array name="currency_array">
        <item>US Dollar</item>
        <item>Colombian Peso</item>
        <item>Euro</item>
    </string-array>

    <string-array name="city_array">
        <item>Bogota</item>
    </string-array>

    <string-array name="category_array">
        <item>Ecotourism</item>
    </string-array>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
