<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tsfactory.user.android.vhs.fragments.AddPropertyFragment">

    <ScrollView android:id="@+id/add_property_form" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout android:id="@+id/new_property_form" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical">

            <EditText android:id="@+id/property_title" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/property_title"
                android:inputType="textCapWords"
                android:maxLines="1" android:singleLine="true" />

            <EditText
                android:id="@+id/property_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:hint="@string/main_description"
                android:minLines="2"/>

            <EditText android:id="@+id/property_location" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/property_location"
                android:inputType="textCapSentences"
                android:maxLines="1" android:singleLine="true" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center_vertical">

                <EditText
                    android:id="@+id/property_price"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:inputType="numberDecimal"
                    android:layout_toLeftOf="@+id/property_currency"
                    android:hint="@string/property_price" />

                <Spinner
                    android:id="@+id/property_currency"
                    android:layout_width="150dp"
                    android:layout_height="46dp"
                    android:layout_alignParentRight="true"/>


            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/property_photo_message" />

            <Button android:id="@+id/property_add_photo_button" style="?android:textAppearanceSmall"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_marginTop="16dp" android:text="@string/property_add_photo"
                android:background="#99CC00" android:layout_gravity="right"
                android:textStyle="bold" />



            <Button android:id="@+id/email_sign_in_button" style="?android:textAppearanceSmall"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_marginTop="16dp" android:text="@string/title_section2"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>
